Ajuste em usuario para compatiblidade com o banco, criação de DTO e documentação